本のクエリログ追加