@@ -53,67 +53,64 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
         Map<String, Object> allResult;
-        try{
-        allResult = g.V(courseId)
-                                         .hasLabel(VertexLabel.BOOK.getString())
-                                         .project("base",
-                                                  "features",
-                                                  "targetDescriptions",
-                                                  "sections",
-                                                  "tags",
-                                                  "author",
-                                                  "status",
-                                                  "purchased",
-                                                  "lastViewedPageId")
-                                         .by(__.valueMap().with(WithOptions.tokens))
-                                         .by(__.out(EdgeLabel.INCLUDE.getString())
-                                               .hasLabel(VertexLabel.BOOK_FEATURE.getString())
-                                               .valueMap()
-                                               .fold())
-                                         .by(__.out(EdgeLabel.INCLUDE.getString())
-                                               .hasLabel(VertexLabel.BOOK_TARGET_DESCRIPTION.getString())
-                                               .valueMap()
-                                               .fold())
-                                         .by(__.out(EdgeLabel.INCLUDE.getString())
-                                               .hasLabel(VertexLabel.SECTION.getString())
-                                               .project("sectionBase", "sectionNumber", "sectionContents")
-                                               .by(__.valueMap().with(WithOptions.tokens))
-                                               .by(__.inE(EdgeLabel.INCLUDE.getString())
-                                                     .values(IncludeEdgeProperty.NUMBER.getString()))
-                                               .by(__.out(EdgeLabel.INCLUDE.getString())
-                                                     .hasLabel(VertexLabel.PAGE.getString())
-                                                     .project("contentBase", "contentNumber")
-                                                     .by(__.valueMap().with(WithOptions.tokens))
-                                                     .by(__.inE(EdgeLabel.INCLUDE.getString())
-                                                           .values(IncludeEdgeProperty.NUMBER.getString()))
-                                                     .fold())
-                                               .fold())
-                                         .by(__.out(EdgeLabel.RELATED_TO.getString())
-                                               .hasLabel(VertexLabel.TAG.getString())
-                                               .valueMap()
-                                               .with(WithOptions.tokens)
-                                               .fold())
-                                         .by(__.in(EdgeLabel.DRAFT.getString(),
-                                                   EdgeLabel.DELETE.getString(),
-                                                   EdgeLabel.SUSPEND.getString(),
-                                                   EdgeLabel.PUBLISH.getString())
-                                               .hasLabel(VertexLabel.USER.getString())
-                                               .valueMap()
-                                               .with(WithOptions.tokens))
-                                         .by(__.inE(EdgeLabel.DRAFT.getString(),
-                                                    EdgeLabel.DELETE.getString(),
-                                                    EdgeLabel.SUSPEND.getString(),
-                                                    EdgeLabel.PUBLISH.getString()).label())
-                                         .by(__.coalesce(__.inE(EdgeLabel.PURCHASE.getString())
-                                                           .where(outV().hasId(userId)
-                                                                        .hasLabel(VertexLabel.USER.getString()))
-                                                           .limit(1)
-                                                           .constant(true), constant(false)))
-                                         .by(__.coalesce(__.inE(EdgeLabel.VIEW.getString())
-                                                           .where(outV().hasId(userId)
-                                                                        .hasLabel(VertexLabel.USER.getString()))
-                                                           .values(ViewEdgeProperty.PAGE_ID.getString()), constant("")))
-                                         .next();
+        try {
+            allResult = g.V(courseId)
+                         .hasLabel(VertexLabel.BOOK.getString())
+                         .project("base",
+                                  "features",
+                                  "targetDescriptions",
+                                  "sections",
+                                  "tags",
+                                  "author",
+                                  "status",
+                                  "purchased",
+                                  "lastViewedPageId")
+                         .by(__.valueMap().with(WithOptions.tokens))
+                         .by(__.out(EdgeLabel.INCLUDE.getString())
+                               .hasLabel(VertexLabel.BOOK_FEATURE.getString())
+                               .valueMap()
+                               .fold())
+                         .by(__.out(EdgeLabel.INCLUDE.getString())
+                               .hasLabel(VertexLabel.BOOK_TARGET_DESCRIPTION.getString())
+                               .valueMap()
+                               .fold())
+                         .by(__.out(EdgeLabel.INCLUDE.getString())
+                               .hasLabel(VertexLabel.SECTION.getString())
+                               .project("sectionBase", "sectionNumber", "sectionContents")
+                               .by(__.valueMap().with(WithOptions.tokens))
+                               .by(__.inE(EdgeLabel.INCLUDE.getString()).values(IncludeEdgeProperty.NUMBER.getString()))
+                               .by(__.out(EdgeLabel.INCLUDE.getString())
+                                     .hasLabel(VertexLabel.PAGE.getString())
+                                     .project("contentBase", "contentNumber")
+                                     .by(__.valueMap().with(WithOptions.tokens))
+                                     .by(__.inE(EdgeLabel.INCLUDE.getString())
+                                           .values(IncludeEdgeProperty.NUMBER.getString()))
+                                     .fold())
+                               .fold())
+                         .by(__.out(EdgeLabel.RELATED_TO.getString())
+                               .hasLabel(VertexLabel.TAG.getString())
+                               .valueMap()
+                               .with(WithOptions.tokens)
+                               .fold())
+                         .by(__.in(EdgeLabel.DRAFT.getString(),
+                                   EdgeLabel.DELETE.getString(),
+                                   EdgeLabel.SUSPEND.getString(),
+                                   EdgeLabel.PUBLISH.getString())
+                               .hasLabel(VertexLabel.USER.getString())
+                               .valueMap()
+                               .with(WithOptions.tokens))
+                         .by(__.inE(EdgeLabel.DRAFT.getString(),
+                                    EdgeLabel.DELETE.getString(),
+                                    EdgeLabel.SUSPEND.getString(),
+                                    EdgeLabel.PUBLISH.getString()).label())
+                         .by(__.coalesce(__.inE(EdgeLabel.PURCHASE.getString())
+                                           .where(outV().hasId(userId).hasLabel(VertexLabel.USER.getString()))
+                                           .limit(1)
+                                           .constant(true), constant(false)))
+                         .by(__.coalesce(__.inE(EdgeLabel.VIEW.getString())
+                                           .where(outV().hasId(userId).hasLabel(VertexLabel.USER.getString()))
+                                           .values(ViewEdgeProperty.PAGE_ID.getString()), constant("")))
+                         .next();
         } catch (Exception e) {
             log.error("find book error: {}", e.getMessage());
             throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
@@ -128,56 +125,49 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
         Map<String, Object> allResult;
-        try{
-        allResult = g.V(bookId)
-                                         .hasLabel(VertexLabel.BOOK.getString())
-                                         .project("base",
-                                                  "features",
-                                                  "targetDescriptions",
-                                                  "sections",
-                                                  "tags",
-                                                  "author",
-                                                  "status")
-                                         .by(__.valueMap().with(WithOptions.tokens))
-                                         .by(__.out(EdgeLabel.INCLUDE.getString())
-                                               .hasLabel(VertexLabel.BOOK_FEATURE.getString())
-                                               .valueMap()
-                                               .fold())
-                                         .by(__.out(EdgeLabel.INCLUDE.getString())
-                                               .hasLabel(VertexLabel.BOOK_TARGET_DESCRIPTION.getString())
-                                               .valueMap()
-                                               .fold())
-                                         .by(__.out(EdgeLabel.INCLUDE.getString())
-                                               .hasLabel(VertexLabel.SECTION.getString())
-                                               .project("sectionBase", "sectionNumber", "sectionContents")
-                                               .by(__.valueMap().with(WithOptions.tokens))
-                                               .by(__.inE(EdgeLabel.INCLUDE.getString())
-                                                     .values(IncludeEdgeProperty.NUMBER.getString()))
-                                               .by(__.out(EdgeLabel.INCLUDE.getString())
-                                                     .hasLabel(VertexLabel.PAGE.getString())
-                                                     .project("pageBase", "pageNumber")
-                                                     .by(__.valueMap().with(WithOptions.tokens))
-                                                     .by(__.inE(EdgeLabel.INCLUDE.getString())
-                                                           .values(IncludeEdgeProperty.NUMBER.getString()))
-                                                     .fold())
-                                               .fold())
-                                         .by(__.out(EdgeLabel.RELATED_TO.getString())
-                                               .hasLabel(VertexLabel.TAG.getString())
-                                               .valueMap()
-                                               .with(WithOptions.tokens)
-                                               .fold())
-                                         .by(__.in(EdgeLabel.DRAFT.getString(),
-                                                   EdgeLabel.DELETE.getString(),
-                                                   EdgeLabel.SUSPEND.getString(),
-                                                   EdgeLabel.PUBLISH.getString())
-                                               .hasLabel(VertexLabel.USER.getString())
-                                               .valueMap()
-                                               .with(WithOptions.tokens))
-                                         .by(__.inE(EdgeLabel.DRAFT.getString(),
-                                                    EdgeLabel.DELETE.getString(),
-                                                    EdgeLabel.SUSPEND.getString(),
-                                                    EdgeLabel.PUBLISH.getString()).label())
-                                         .next();
+        try {
+            allResult = g.V(bookId)
+                         .hasLabel(VertexLabel.BOOK.getString())
+                         .project("base", "features", "targetDescriptions", "sections", "tags", "author", "status")
+                         .by(__.valueMap().with(WithOptions.tokens))
+                         .by(__.out(EdgeLabel.INCLUDE.getString())
+                               .hasLabel(VertexLabel.BOOK_FEATURE.getString())
+                               .valueMap()
+                               .fold())
+                         .by(__.out(EdgeLabel.INCLUDE.getString())
+                               .hasLabel(VertexLabel.BOOK_TARGET_DESCRIPTION.getString())
+                               .valueMap()
+                               .fold())
+                         .by(__.out(EdgeLabel.INCLUDE.getString())
+                               .hasLabel(VertexLabel.SECTION.getString())
+                               .project("sectionBase", "sectionNumber", "sectionContents")
+                               .by(__.valueMap().with(WithOptions.tokens))
+                               .by(__.inE(EdgeLabel.INCLUDE.getString()).values(IncludeEdgeProperty.NUMBER.getString()))
+                               .by(__.out(EdgeLabel.INCLUDE.getString())
+                                     .hasLabel(VertexLabel.PAGE.getString())
+                                     .project("pageBase", "pageNumber")
+                                     .by(__.valueMap().with(WithOptions.tokens))
+                                     .by(__.inE(EdgeLabel.INCLUDE.getString())
+                                           .values(IncludeEdgeProperty.NUMBER.getString()))
+                                     .fold())
+                               .fold())
+                         .by(__.out(EdgeLabel.RELATED_TO.getString())
+                               .hasLabel(VertexLabel.TAG.getString())
+                               .valueMap()
+                               .with(WithOptions.tokens)
+                               .fold())
+                         .by(__.in(EdgeLabel.DRAFT.getString(),
+                                   EdgeLabel.DELETE.getString(),
+                                   EdgeLabel.SUSPEND.getString(),
+                                   EdgeLabel.PUBLISH.getString())
+                               .hasLabel(VertexLabel.USER.getString())
+                               .valueMap()
+                               .with(WithOptions.tokens))
+                         .by(__.inE(EdgeLabel.DRAFT.getString(),
+                                    EdgeLabel.DELETE.getString(),
+                                    EdgeLabel.SUSPEND.getString(),
+                                    EdgeLabel.PUBLISH.getString()).label())
+                         .next();
         } catch (Exception e) {
             log.error("find book for guest error: {}", e.getMessage());
             throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
@@ -233,71 +223,122 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     }
 
     private long findSumCountWithFilter(GraphTraversalSource g, String userId, SearchCondition searchCondition) {
-        return g.V(userId).out(searchCondition.getFilter()).hasLabel(VertexLabel.BOOK.getString()).count().next();
+        try {
+            return g.V(userId).out(searchCondition.getFilter()).hasLabel(VertexLabel.BOOK.getString()).count().next();
+        } catch (Exception e) {
+            log.error("findSumCountWithFilter error: {} {} {}", userId, searchCondition, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     private long findSumCountWithoutFilter(GraphTraversalSource g, String userId) {
-        return g.V(userId)
-                .out(EdgeLabel.DRAFT.getString(), EdgeLabel.PUBLISH.getString(), EdgeLabel.SUSPEND.getString())
-                .hasLabel(VertexLabel.BOOK.getString())
-                .count()
-                .next();
+        try {
+            return g.V(userId)
+                    .out(EdgeLabel.DRAFT.getString(), EdgeLabel.PUBLISH.getString(), EdgeLabel.SUSPEND.getString())
+                    .hasLabel(VertexLabel.BOOK.getString())
+                    .count()
+                    .next();
+        } catch (Exception e) {
+            log.error("findSumCountWithoutFilter error: {} {}", userId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     private List<Map<String, Object>> findCreatedBySelfWithFilter(
         GraphTraversalSource g, String userId, SearchCondition searchCondition) {
 
-        if (searchCondition.shouldSort()) {
-            Order orderType = searchCondition.isAscend() ? Order.asc : Order.desc;
-            if (searchCondition.vertexSort()) {
+        try {
+            if (searchCondition.shouldSort()) {
+                Order orderType = searchCondition.isAscend() ? Order.asc : Order.desc;
+                if (searchCondition.vertexSort()) {
+                    return g.V(userId)
+                            .out(searchCondition.getFilter())
+                            .hasLabel(VertexLabel.BOOK.getString())
+                            .order()
+                            .by(searchCondition.getField(), orderType)
+                            .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
+                            .project("base", "status", "purchaseCount")
+                            .by(__.valueMap().with(WithOptions.tokens))
+                            .by(__.inE(searchCondition.getFilter()).label())
+                            .by(__.in(EdgeLabel.PURCHASE.getString()).count())
+                            .toList();
+                } else {
+                    return g.V(userId)
+                            .out(searchCondition.getFilter())
+                            .hasLabel(VertexLabel.BOOK.getString())
+                            .project("base", "status", "purchaseCount", "sortEdge")
+                            .by(__.valueMap().with(WithOptions.tokens))
+                            .by(__.inE(searchCondition.getFilter()).label())
+                            .by(__.in(EdgeLabel.PURCHASE.getString()).count())
+                            .by(__.in(searchCondition.getField()).count())
+                            .order()
+                            .by(select("sortEdge"), orderType)
+                            .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
+                            .toList();
+                }
+            } else {
                 return g.V(userId)
                         .out(searchCondition.getFilter())
                         .hasLabel(VertexLabel.BOOK.getString())
-                        .order()
-                        .by(searchCondition.getField(), orderType)
                         .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
                         .project("base", "status", "purchaseCount")
                         .by(__.valueMap().with(WithOptions.tokens))
                         .by(__.inE(searchCondition.getFilter()).label())
                         .by(__.in(EdgeLabel.PURCHASE.getString()).count())
                         .toList();
-            } else {
-                return g.V(userId)
-                        .out(searchCondition.getFilter())
-                        .hasLabel(VertexLabel.BOOK.getString())
-                        .project("base", "status", "purchaseCount", "sortEdge")
-                        .by(__.valueMap().with(WithOptions.tokens))
-                        .by(__.inE(searchCondition.getFilter()).label())
-                        .by(__.in(EdgeLabel.PURCHASE.getString()).count())
-                        .by(__.in(searchCondition.getField()).count())
-                        .order()
-                        .by(select("sortEdge"), orderType)
-                        .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
-                        .toList();
             }
-        } else {
-            return g.V(userId)
-                    .out(searchCondition.getFilter())
-                    .hasLabel(VertexLabel.BOOK.getString())
-                    .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
-                    .project("base", "status", "purchaseCount")
-                    .by(__.valueMap().with(WithOptions.tokens))
-                    .by(__.inE(searchCondition.getFilter()).label())
-                    .by(__.in(EdgeLabel.PURCHASE.getString()).count())
-                    .toList();
+        } catch (Exception e) {
+            log.error("findCreatedBySelfWithFilter error: {} {} {}", userId, searchCondition, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
         }
     }
 
     private List<Map<String, Object>> findCreatedBySelfWithoutFilter(
         GraphTraversalSource g, String userId, SearchCondition searchCondition) {
-        if (searchCondition.shouldSort()) {
-            Order orderType = searchCondition.isAscend() ? Order.asc : Order.desc;
-            if (searchCondition.vertexSort()) {
+        try {
+            if (searchCondition.shouldSort()) {
+                Order orderType = searchCondition.isAscend() ? Order.asc : Order.desc;
+                if (searchCondition.vertexSort()) {
+                    return g.V(userId)
+                            .out(EdgeLabel.DRAFT.getString(),
+                                 EdgeLabel.PUBLISH.getString(),
+                                 EdgeLabel.SUSPEND.getString())
+                            .hasLabel(VertexLabel.BOOK.getString())
+                            .order()
+                            .by(searchCondition.getField(), orderType)
+                            .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
+                            .project("base", "status", "purchaseCount")
+                            .by(__.valueMap().with(WithOptions.tokens))
+                            .by(__.inE(EdgeLabel.DRAFT.getString(),
+                                       EdgeLabel.PUBLISH.getString(),
+                                       EdgeLabel.SUSPEND.getString()).label())
+                            .by(__.in(EdgeLabel.PURCHASE.getString()).count())
+                            .toList();
+                } else {
+                    return g.V(userId)
+                            .out(EdgeLabel.DRAFT.getString(),
+                                 EdgeLabel.PUBLISH.getString(),
+                                 EdgeLabel.SUSPEND.getString())
+                            .hasLabel(VertexLabel.BOOK.getString())
+                            .project("base", "status", "purchaseCount", "sortEdge")
+                            .by(__.valueMap().with(WithOptions.tokens))
+                            .by(__.inE(EdgeLabel.DRAFT.getString(),
+                                       EdgeLabel.PUBLISH.getString(),
+                                       EdgeLabel.SUSPEND.getString()).label())
+                            .by(__.in(EdgeLabel.PURCHASE.getString()).count())
+                            .by(__.in(searchCondition.getField()).count())
+                            .order()
+                            .by(select("sortEdge"), orderType)
+                            .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
+                            .toList();
+                }
+            } else {
                 return g.V(userId)
                         .out(EdgeLabel.DRAFT.getString(), EdgeLabel.PUBLISH.getString(), EdgeLabel.SUSPEND.getString())
                         .hasLabel(VertexLabel.BOOK.getString())
-                        .order()
-                        .by(searchCondition.getField(), orderType)
                         .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
                         .project("base", "status", "purchaseCount")
                         .by(__.valueMap().with(WithOptions.tokens))
@@ -306,34 +347,11 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
                                    EdgeLabel.SUSPEND.getString()).label())
                         .by(__.in(EdgeLabel.PURCHASE.getString()).count())
                         .toList();
-            } else {
-                return g.V(userId)
-                        .out(EdgeLabel.DRAFT.getString(), EdgeLabel.PUBLISH.getString(), EdgeLabel.SUSPEND.getString())
-                        .hasLabel(VertexLabel.BOOK.getString())
-                        .project("base", "status", "purchaseCount", "sortEdge")
-                        .by(__.valueMap().with(WithOptions.tokens))
-                        .by(__.inE(EdgeLabel.DRAFT.getString(),
-                                   EdgeLabel.PUBLISH.getString(),
-                                   EdgeLabel.SUSPEND.getString()).label())
-                        .by(__.in(EdgeLabel.PURCHASE.getString()).count())
-                        .by(__.in(searchCondition.getField()).count())
-                        .order()
-                        .by(select("sortEdge"), orderType)
-                        .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
-                        .toList();
             }
-        } else {
-            return g.V(userId)
-                    .out(EdgeLabel.DRAFT.getString(), EdgeLabel.PUBLISH.getString(), EdgeLabel.SUSPEND.getString())
-                    .hasLabel(VertexLabel.BOOK.getString())
-                    .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
-                    .project("base", "status", "purchaseCount")
-                    .by(__.valueMap().with(WithOptions.tokens))
-                    .by(__.inE(EdgeLabel.DRAFT.getString(),
-                               EdgeLabel.PUBLISH.getString(),
-                               EdgeLabel.SUSPEND.getString()).label())
-                    .by(__.in(EdgeLabel.PURCHASE.getString()).count())
-                    .toList();
+        } catch (Exception e) {
+            log.error("findCreatedBySelfWithoutFilter error: {} {} {}", userId, searchCondition, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
         }
     }
 
@@ -342,14 +360,55 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
         List<Map<String, Object>> allResults;
-        if (searchCondition.shouldSort()) {
-            Order orderType = searchCondition.isAscend() ? Order.asc : Order.desc;
-            if (searchCondition.vertexSort()) {
+        try {
+            if (searchCondition.shouldSort()) {
+                Order orderType = searchCondition.isAscend() ? Order.asc : Order.desc;
+                if (searchCondition.vertexSort()) {
+                    allResults = g.V(userId)
+                                  .out(searchCondition.getFilter())
+                                  .hasLabel(VertexLabel.BOOK.getString())
+                                  .order()
+                                  .by(searchCondition.getField(), orderType)
+                                  .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
+                                  .project("base", "tags", "status", "liked", "learned")
+                                  .by(__.valueMap().with(WithOptions.tokens))
+                                  .by(__.out(EdgeLabel.RELATED_TO.getString())
+                                        .hasLabel(VertexLabel.TAG.getString())
+                                        .valueMap()
+                                        .with(WithOptions.tokens)
+                                        .fold())
+                                  .by(__.inE(EdgeLabel.DRAFT.getString(),
+                                             EdgeLabel.PUBLISH.getString(),
+                                             EdgeLabel.DELETE.getString()).label())
+                                  .by(__.in(EdgeLabel.LIKE.getString()).count())
+                                  .by(__.in(EdgeLabel.LEARN.getString()).count())
+                                  .toList();
+                } else {
+                    allResults = g.V(userId)
+                                  .out(searchCondition.getFilter())
+                                  .hasLabel(VertexLabel.PAGE.getString())
+                                  .project("base", "tags", "status", "liked", "learned", "sortEdge")
+                                  .by(__.valueMap().with(WithOptions.tokens))
+                                  .by(__.out(EdgeLabel.RELATED_TO.getString())
+                                        .hasLabel(VertexLabel.TAG.getString())
+                                        .valueMap()
+                                        .with(WithOptions.tokens)
+                                        .fold())
+                                  .by(__.inE(EdgeLabel.DRAFT.getString(),
+                                             EdgeLabel.PUBLISH.getString(),
+                                             EdgeLabel.DELETE.getString()).label())
+                                  .by(__.in(EdgeLabel.LIKE.getString()).count())
+                                  .by(__.in(EdgeLabel.LEARN.getString()).count())
+                                  .by(__.in(searchCondition.getField()).count())
+                                  .order()
+                                  .by(select("sortEdge"), orderType)
+                                  .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
+                                  .toList();
+                }
+            } else {
                 allResults = g.V(userId)
                               .out(searchCondition.getFilter())
-                              .hasLabel(VertexLabel.BOOK.getString())
-                              .order()
-                              .by(searchCondition.getField(), orderType)
+                              .hasLabel(VertexLabel.PAGE.getString())
                               .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
                               .project("base", "tags", "status", "liked", "learned")
                               .by(__.valueMap().with(WithOptions.tokens))
@@ -364,46 +423,11 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
                               .by(__.in(EdgeLabel.LIKE.getString()).count())
                               .by(__.in(EdgeLabel.LEARN.getString()).count())
                               .toList();
-            } else {
-                allResults = g.V(userId)
-                              .out(searchCondition.getFilter())
-                              .hasLabel(VertexLabel.PAGE.getString())
-                              .project("base", "tags", "status", "liked", "learned", "sortEdge")
-                              .by(__.valueMap().with(WithOptions.tokens))
-                              .by(__.out(EdgeLabel.RELATED_TO.getString())
-                                    .hasLabel(VertexLabel.TAG.getString())
-                                    .valueMap()
-                                    .with(WithOptions.tokens)
-                                    .fold())
-                              .by(__.inE(EdgeLabel.DRAFT.getString(),
-                                         EdgeLabel.PUBLISH.getString(),
-                                         EdgeLabel.DELETE.getString()).label())
-                              .by(__.in(EdgeLabel.LIKE.getString()).count())
-                              .by(__.in(EdgeLabel.LEARN.getString()).count())
-                              .by(__.in(searchCondition.getField()).count())
-                              .order()
-                              .by(select("sortEdge"), orderType)
-                              .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
-                              .toList();
             }
-        } else {
-            allResults = g.V(userId)
-                          .out(searchCondition.getFilter())
-                          .hasLabel(VertexLabel.PAGE.getString())
-                          .range(searchCondition.getRangeStart(), searchCondition.getRangeEnd())
-                          .project("base", "tags", "status", "liked", "learned")
-                          .by(__.valueMap().with(WithOptions.tokens))
-                          .by(__.out(EdgeLabel.RELATED_TO.getString())
-                                .hasLabel(VertexLabel.TAG.getString())
-                                .valueMap()
-                                .with(WithOptions.tokens)
-                                .fold())
-                          .by(__.inE(EdgeLabel.DRAFT.getString(),
-                                     EdgeLabel.PUBLISH.getString(),
-                                     EdgeLabel.DELETE.getString()).label())
-                          .by(__.in(EdgeLabel.LIKE.getString()).count())
-                          .by(__.in(EdgeLabel.LEARN.getString()).count())
-                          .toList();
+        } catch (Exception e) {
+            log.error("findActioned error: {} {} {}", userId, searchCondition, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
         }
 
         return allResults.stream()
@@ -414,25 +438,33 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     @Override
     public BookListEntity findOwn(String userId, int page) {
         GraphTraversalSource g = neptuneClient.newTraversal();
-        List<Map<String, Object>> allResults = g.V(userId)
-                                                .out(EdgeLabel.PURCHASE.getString())
-                                                .hasLabel(VertexLabel.BOOK.getString())
-                                                .order()
-                                                .by(DateProperty.CREATE_TIME.getString(), Order.desc)
-                                                .range(24 * (page - 1), 24 * page) //TODO: ドメインロジックに閉じ込める
-                                                .project("base", "author")
-                                                .by(__.valueMap().with(WithOptions.tokens))
-                                                .by(__.in(EdgeLabel.PUBLISH.getString(),
-                                                          EdgeLabel.DRAFT.getString(),
-                                                          EdgeLabel.SUSPEND.getString(),
-                                                          EdgeLabel.DELETE.getString())
-                                                      .hasLabel(VertexLabel.USER.getString())
-                                                      .valueMap()
-                                                      .with(WithOptions.tokens))
-                                                .toList();
+        List<Map<String, Object>> allResults;
+        long sumCount;
+        try {
+            allResults = g.V(userId)
+                          .out(EdgeLabel.PURCHASE.getString())
+                          .hasLabel(VertexLabel.BOOK.getString())
+                          .order()
+                          .by(DateProperty.CREATE_TIME.getString(), Order.desc)
+                          .range(24 * (page - 1), 24 * page) //TODO: ドメインロジックに閉じ込める
+                          .project("base", "author")
+                          .by(__.valueMap().with(WithOptions.tokens))
+                          .by(__.in(EdgeLabel.PUBLISH.getString(),
+                                    EdgeLabel.DRAFT.getString(),
+                                    EdgeLabel.SUSPEND.getString(),
+                                    EdgeLabel.DELETE.getString())
+                                .hasLabel(VertexLabel.USER.getString())
+                                .valueMap()
+                                .with(WithOptions.tokens))
+                          .toList();
 
-        long sumCount =
-            g.V(userId).out(EdgeLabel.PURCHASE.getString()).hasLabel(VertexLabel.BOOK.getString()).count().next();
+            sumCount =
+                g.V(userId).out(EdgeLabel.PURCHASE.getString()).hasLabel(VertexLabel.BOOK.getString()).count().next();
+        } catch (Exception e) {
+            log.error("findOwn error: {} {} {}", userId, page, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
 
         List<BookEntity> bookEntities =
             allResults.stream().map(r -> BookEntityConverter.toBookEntityForOwnList(r)).collect(Collectors.toList());
@@ -443,37 +475,43 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     @Override
     public BookListEntity findSearched(String query, int page) {
         GraphTraversalSource g = neptuneClient.newTraversal();
-        List<Map<String, Object>> allResults = g.V()
-                                                .hasLabel(VertexLabel.BOOK.getString())
-                                                .or(has(BookVertexProperty.TITLE.getString(),
-                                                        containing(query.toLowerCase())),
-                                                    has(BookVertexProperty.TITLE.getString(), containing(query)),
-                                                    has(BookVertexProperty.TITLE.getString(),
-                                                        containing(query.substring(0, 1).toUpperCase())),
-                                                    has(BookVertexProperty.TITLE.getString(),
-                                                        containing(query.toUpperCase())))
-                                                .where(inE().hasLabel(EdgeLabel.PUBLISH.getString()))
-                                                .project("base", "purchaseCount", "author")
-                                                .by(__.valueMap().with(WithOptions.tokens))
-                                                .by(__.in(EdgeLabel.PURCHASE.getString()).count())
-                                                .by(__.in(EdgeLabel.PUBLISH.getString(),
-                                                          EdgeLabel.DRAFT.getString(),
-                                                          EdgeLabel.SUSPEND.getString(),
-                                                          EdgeLabel.DELETE.getString())
-                                                      .hasLabel(VertexLabel.USER.getString())
-                                                      .valueMap()
-                                                      .with(WithOptions.tokens))
-                                                .order()
-                                                .by(select("purchaseCount"), Order.desc)
-                                                .range(24 * (page - 1), 24 * page)
-                                                .toList();
+        List<Map<String, Object>> allResults;
+        long sumCount;
+        try {
+            allResults = g.V()
+                          .hasLabel(VertexLabel.BOOK.getString())
+                          .or(has(BookVertexProperty.TITLE.getString(), containing(query.toLowerCase())),
+                              has(BookVertexProperty.TITLE.getString(), containing(query)),
+                              has(BookVertexProperty.TITLE.getString(),
+                                  containing(query.substring(0, 1).toUpperCase())),
+                              has(BookVertexProperty.TITLE.getString(), containing(query.toUpperCase())))
+                          .where(inE().hasLabel(EdgeLabel.PUBLISH.getString()))
+                          .project("base", "purchaseCount", "author")
+                          .by(__.valueMap().with(WithOptions.tokens))
+                          .by(__.in(EdgeLabel.PURCHASE.getString()).count())
+                          .by(__.in(EdgeLabel.PUBLISH.getString(),
+                                    EdgeLabel.DRAFT.getString(),
+                                    EdgeLabel.SUSPEND.getString(),
+                                    EdgeLabel.DELETE.getString())
+                                .hasLabel(VertexLabel.USER.getString())
+                                .valueMap()
+                                .with(WithOptions.tokens))
+                          .order()
+                          .by(select("purchaseCount"), Order.desc)
+                          .range(24 * (page - 1), 24 * page)
+                          .toList();
 
-        long sumCount = g.V()
-                         .hasLabel(VertexLabel.BOOK.getString())
-                         .has(BookVertexProperty.TITLE.getString(), containing(query))
-                         .where(inE().hasLabel(EdgeLabel.PUBLISH.getString()))
-                         .count()
-                         .next();
+            sumCount = g.V()
+                        .hasLabel(VertexLabel.BOOK.getString())
+                        .has(BookVertexProperty.TITLE.getString(), containing(query))
+                        .where(inE().hasLabel(EdgeLabel.PUBLISH.getString()))
+                        .count()
+                        .next();
+        } catch (Exception e) {
+            log.error("findSearched error: {} {} {}", query, page, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
 
         List<BookEntity> bookEntities =
             allResults.stream().map(r -> BookEntityConverter.toBookEntityForOwnList(r)).collect(Collectors.toList());
@@ -484,24 +522,30 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     @Override
     public BookListEntity findRecentlyViewed(String userId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
-        List<Map<String, Object>> allResults = g.V(userId)
-                                                .out(EdgeLabel.VIEW.getString())
-                                                .hasLabel(VertexLabel.BOOK.getString())
-                                                .order()
-                                                .by(coalesce(inE(EdgeLabel.VIEW.getString()).values(DateProperty.CREATE_TIME
-                                                                                                        .getString()),
-                                                             values(DateProperty.CREATE_TIME.getString())), Order.desc)
-                                                .range(0, 6)
-                                                .project("base", "author")
-                                                .by(__.valueMap().with(WithOptions.tokens))
-                                                .by(__.in(EdgeLabel.PUBLISH.getString(),
-                                                          EdgeLabel.DRAFT.getString(),
-                                                          EdgeLabel.SUSPEND.getString(),
-                                                          EdgeLabel.DELETE.getString())
-                                                      .hasLabel(VertexLabel.USER.getString())
-                                                      .valueMap()
-                                                      .with(WithOptions.tokens))
-                                                .toList();
+        List<Map<String, Object>> allResults;
+        try {
+            allResults = g.V(userId)
+                          .out(EdgeLabel.VIEW.getString())
+                          .hasLabel(VertexLabel.BOOK.getString())
+                          .order()
+                          .by(coalesce(inE(EdgeLabel.VIEW.getString()).values(DateProperty.CREATE_TIME.getString()),
+                                       values(DateProperty.CREATE_TIME.getString())), Order.desc)
+                          .range(0, 6)
+                          .project("base", "author")
+                          .by(__.valueMap().with(WithOptions.tokens))
+                          .by(__.in(EdgeLabel.PUBLISH.getString(),
+                                    EdgeLabel.DRAFT.getString(),
+                                    EdgeLabel.SUSPEND.getString(),
+                                    EdgeLabel.DELETE.getString())
+                                .hasLabel(VertexLabel.USER.getString())
+                                .valueMap()
+                                .with(WithOptions.tokens))
+                          .toList();
+        } catch (Exception e) {
+            log.error("findRecentlyViewed error: {} {}", userId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
 
         List<BookEntity> bookEntities =
             allResults.stream().map(r -> BookEntityConverter.toBookEntityForOwnList(r)).collect(Collectors.toList());
@@ -512,26 +556,33 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     @Override
     public BookListEntity findNew(int page) {
         GraphTraversalSource g = neptuneClient.newTraversal();
-        List<Map<String, Object>> allResults = g.V()
-                                                .out(EdgeLabel.PUBLISH.getString())
-                                                .hasLabel(VertexLabel.BOOK.getString())
-                                                .order()
-                                                .by(coalesce(inE(EdgeLabel.PUBLISH.getString()).values(DateProperty.CREATE_TIME
-                                                                                                           .getString()),
-                                                             values(DateProperty.CREATE_TIME.getString())), Order.desc)
-                                                .range(12 * (page - 1), 12 * page)
-                                                .project("base", "author")
-                                                .by(__.valueMap().with(WithOptions.tokens))
-                                                .by(__.in(EdgeLabel.PUBLISH.getString(),
-                                                          EdgeLabel.DRAFT.getString(),
-                                                          EdgeLabel.SUSPEND.getString(),
-                                                          EdgeLabel.DELETE.getString())
-                                                      .hasLabel(VertexLabel.USER.getString())
-                                                      .valueMap()
-                                                      .with(WithOptions.tokens))
-                                                .toList();
+        List<Map<String, Object>> allResults;
+        long sumCount;
+        try {
+            allResults = g.V()
+                          .out(EdgeLabel.PUBLISH.getString())
+                          .hasLabel(VertexLabel.BOOK.getString())
+                          .order()
+                          .by(coalesce(inE(EdgeLabel.PUBLISH.getString()).values(DateProperty.CREATE_TIME.getString()),
+                                       values(DateProperty.CREATE_TIME.getString())), Order.desc)
+                          .range(12 * (page - 1), 12 * page)
+                          .project("base", "author")
+                          .by(__.valueMap().with(WithOptions.tokens))
+                          .by(__.in(EdgeLabel.PUBLISH.getString(),
+                                    EdgeLabel.DRAFT.getString(),
+                                    EdgeLabel.SUSPEND.getString(),
+                                    EdgeLabel.DELETE.getString())
+                                .hasLabel(VertexLabel.USER.getString())
+                                .valueMap()
+                                .with(WithOptions.tokens))
+                          .toList();
 
-        long sumCount = g.E().hasLabel(EdgeLabel.PUBLISH.getString()).count().next();
+            sumCount = g.E().hasLabel(EdgeLabel.PUBLISH.getString()).count().next();
+        } catch (Exception e) {
+            log.error("findNew error: {} {}", page, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
 
         List<BookEntity> bookEntities =
             allResults.stream().map(r -> BookEntityConverter.toBookEntityForOwnList(r)).collect(Collectors.toList());
@@ -542,29 +593,37 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     @Override
     public BookListEntity findFamous(int page) {
         GraphTraversalSource g = neptuneClient.newTraversal();
-        List<Map<String, Object>> allResults = g.V()
-                                                .out(EdgeLabel.PUBLISH.getString())
-                                                .hasLabel(VertexLabel.BOOK.getString())
-                                                .has(BookVertexProperty.PRICE.getString(), P.gt(0))
-                                                .project("base", "purchaseCount", "author")
-                                                .by(__.valueMap().with(WithOptions.tokens))
-                                                .by(__.in(EdgeLabel.PURCHASE.getString()).count())
-                                                .by(__.in(EdgeLabel.PUBLISH.getString(),
-                                                          EdgeLabel.DRAFT.getString(),
-                                                          EdgeLabel.SUSPEND.getString(),
-                                                          EdgeLabel.DELETE.getString())
-                                                      .hasLabel(VertexLabel.USER.getString())
-                                                      .valueMap()
-                                                      .with(WithOptions.tokens))
-                                                .order()
-                                                .by(select("purchaseCount"), Order.desc)
-                                                .range(12 * (page - 1), 12 * page)
-                                                .toList();
+        long sumCount;
+        List<Map<String, Object>> allResults;
+        try {
+            allResults = g.V()
+                          .out(EdgeLabel.PUBLISH.getString())
+                          .hasLabel(VertexLabel.BOOK.getString())
+                          .has(BookVertexProperty.PRICE.getString(), P.gt(0))
+                          .project("base", "purchaseCount", "author")
+                          .by(__.valueMap().with(WithOptions.tokens))
+                          .by(__.in(EdgeLabel.PURCHASE.getString()).count())
+                          .by(__.in(EdgeLabel.PUBLISH.getString(),
+                                    EdgeLabel.DRAFT.getString(),
+                                    EdgeLabel.SUSPEND.getString(),
+                                    EdgeLabel.DELETE.getString())
+                                .hasLabel(VertexLabel.USER.getString())
+                                .valueMap()
+                                .with(WithOptions.tokens))
+                          .order()
+                          .by(select("purchaseCount"), Order.desc)
+                          .range(12 * (page - 1), 12 * page)
+                          .toList();
+            sumCount = g.E().hasLabel(EdgeLabel.PUBLISH.getString()).count().next();
+        } catch (Exception e) {
+            log.error("findFamous error: {} {}", page, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
 
         List<BookEntity> bookEntities =
             allResults.stream().map(r -> BookEntityConverter.toBookEntityForOwnList(r)).collect(Collectors.toList());
 
-        long sumCount = g.E().hasLabel(EdgeLabel.PUBLISH.getString()).count().next();
 
         return BookListEntity.builder().books(bookEntities).sumCount(sumCount).build();
     }
@@ -603,7 +662,7 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
             sumCount = g.E().hasLabel(EdgeLabel.PUBLISH.getString()).count().next();
 
         } catch (Exception e) {
-            log.error(e.getMessage());
+            log.error("findFamousFree error: {} {}", page, e.getMessage());
             throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
                                              GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
         }
@@ -614,23 +673,37 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     @Override
     public String findAuthorId(String bookId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
-        return (String) g.V(bookId)
-                         .hasLabel(VertexLabel.BOOK.getString())
-                         .in(EdgeLabel.PUBLISH.getString(), EdgeLabel.DRAFT.getString(), EdgeLabel.SUSPEND.getString())
-                         .id()
-                         .next();
+        try {
+            return (String) g.V(bookId)
+                             .hasLabel(VertexLabel.BOOK.getString())
+                             .in(EdgeLabel.PUBLISH.getString(),
+                                 EdgeLabel.DRAFT.getString(),
+                                 EdgeLabel.SUSPEND.getString())
+                             .id()
+                             .next();
+        } catch (Exception e) {
+            log.error("findAuthorId error: {} {}", bookId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     @Override
     public long findSectionCount(String bookId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
-        return g.V(bookId)
-                .hasLabel(VertexLabel.BOOK.getString())
-                .out(EdgeLabel.INCLUDE.getString())
-                .hasLabel(VertexLabel.SECTION.getString())
-                .count()
-                .next();
+        try {
+            return g.V(bookId)
+                    .hasLabel(VertexLabel.BOOK.getString())
+                    .out(EdgeLabel.INCLUDE.getString())
+                    .hasLabel(VertexLabel.SECTION.getString())
+                    .count()
+                    .next();
+        } catch (Exception e) {
+            log.error("findSectionCount error: {} {}", bookId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
 
     }
 
@@ -638,79 +711,115 @@ public class BookQueryRepositoryImpl implements BookQueryRepository {
     public long findPageCount(String sectionId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
-        return g.V(sectionId)
-                .hasLabel(VertexLabel.SECTION.getString())
-                .out(EdgeLabel.INCLUDE.getString())
-                .hasLabel(VertexLabel.PAGE.getString())
-                .count()
-                .next();
+        try {
+            return g.V(sectionId)
+                    .hasLabel(VertexLabel.SECTION.getString())
+                    .out(EdgeLabel.INCLUDE.getString())
+                    .hasLabel(VertexLabel.PAGE.getString())
+                    .count()
+                    .next();
+        } catch (Exception e) {
+            log.error("findPageCount error: {} {}", sectionId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     @Override
     public List<String> findSectionIds(String bookId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
-        return g.V(bookId)
-                .hasLabel(VertexLabel.BOOK.getString())
-                .out(EdgeLabel.INCLUDE.getString())
-                .hasLabel(VertexLabel.SECTION.getString())
-                .id()
-                .toList()
-                .stream()
-                .map(id -> (String) id)
-                .collect(Collectors.toList());
+        try {
+            return g.V(bookId)
+                    .hasLabel(VertexLabel.BOOK.getString())
+                    .out(EdgeLabel.INCLUDE.getString())
+                    .hasLabel(VertexLabel.SECTION.getString())
+                    .id()
+                    .toList()
+                    .stream()
+                    .map(id -> (String) id)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("findSectionIds error: {} {}", bookId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     @Override
     public List<String> findPageIds(String sectionId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
-        return g.V(sectionId)
-                .hasLabel(VertexLabel.SECTION.getString())
-                .out(EdgeLabel.INCLUDE.getString())
-                .hasLabel(VertexLabel.PAGE.getString())
-                .id()
-                .toList()
-                .stream()
-                .map(id -> (String) id)
-                .collect(Collectors.toList());
+        try {
+            return g.V(sectionId)
+                    .hasLabel(VertexLabel.SECTION.getString())
+                    .out(EdgeLabel.INCLUDE.getString())
+                    .hasLabel(VertexLabel.PAGE.getString())
+                    .id()
+                    .toList()
+                    .stream()
+                    .map(id -> (String) id)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("findPageIds error: {} {}", sectionId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     @Override
     public boolean isPurchased(String bookId, String userId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
-        return g.V(bookId)
-                .hasLabel(VertexLabel.BOOK.getString())
-                .coalesce(__.inE(EdgeLabel.PURCHASE.getString())
-                            .where(outV().hasId(userId).hasLabel(VertexLabel.USER.getString()))
-                            .limit(1)
-                            .constant(true), constant(false))
-                .next();
+        try {
+            return g.V(bookId)
+                    .hasLabel(VertexLabel.BOOK.getString())
+                    .coalesce(__.inE(EdgeLabel.PURCHASE.getString())
+                                .where(outV().hasId(userId).hasLabel(VertexLabel.USER.getString()))
+                                .limit(1)
+                                .constant(true), constant(false))
+                    .next();
+        } catch (Exception e) {
+            log.error("isPurchased error: {} {} {}", bookId, userId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     @Override
     public int findPrice(String bookId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
-        return (int) g.V(bookId)
-                      .hasLabel(VertexLabel.BOOK.getString())
-                      .values(BookVertexProperty.PRICE.getString())
-                      .next();
+        try {
+            return (int) g.V(bookId)
+                          .hasLabel(VertexLabel.BOOK.getString())
+                          .values(BookVertexProperty.PRICE.getString())
+                          .next();
+        } catch (Exception e) {
+            log.error("findPrice error: {} {}", bookId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 
     @Override
     public String findStatus(String bookId) {
         GraphTraversalSource g = neptuneClient.newTraversal();
 
-        return g.V(bookId)
-                .hasLabel(VertexLabel.BOOK.getString())
-                .inE(EdgeLabel.PUBLISH.getString(),
-                     EdgeLabel.DRAFT.getString(),
-                     EdgeLabel.SUSPEND.getString(),
-                     EdgeLabel.DELETE.getString())
-                .where(__.outV().hasLabel(VertexLabel.USER.getString()))
-                .label()
-                .next();
+        try {
+            return g.V(bookId)
+                    .hasLabel(VertexLabel.BOOK.getString())
+                    .inE(EdgeLabel.PUBLISH.getString(),
+                         EdgeLabel.DRAFT.getString(),
+                         EdgeLabel.SUSPEND.getString(),
+                         EdgeLabel.DELETE.getString())
+                    .where(__.outV().hasLabel(VertexLabel.USER.getString()))
+                    .label()
+                    .next();
+        } catch (Exception e) {
+            log.error("findStatus error: {} {}", bookId, e.getMessage());
+            throw new GraphQLCustomException(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                                             GraphQLErrorMessage.INTERNAL_SERVER_ERROR.getString());
+        }
     }
 }
